<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_weight="0.5"
        android:padding="16dp"
        android:scaleType="centerCrop"
        android:src="@drawable/balenciaga"
        android:layout_width="match_parent"
        android:layout_height="100dp" />

    <LinearLayout
        android:layout_weight="1"
        android:layout_margin="16dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <ImageView
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        android:src="@drawable/speedrunner"
        android:layout_width="100dp"
        android:layout_height="100dp" />
    <TextView
        android:textStyle="italic"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/SpeedRunner"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/trackshoes"
            android:layout_width="100dp"
            android:layout_height="100dp" />
        <TextView
            android:textStyle="italic"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/Tripleblacktrackshoes"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <ImageView
            android:layout_gravity="center"
            android:src="@drawable/safe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:text="@string/safepay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_gravity="center"
                android:src="@drawable/reliable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:text="@string/ReliableDelivery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_gravity="center"
                android:src="@drawable/returnicon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:text="@string/Quickeasyreturn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>